# AI-Driven-Driver-Behavior-Analytics

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  db.py  detection.py  main.py  models.py  persistence.py  simulator.py  wsmanager.py
app/api/: endpoints.py
app/templates/: dashboard.html
tests/: test_dashboard.py  test_detection.py  test_integration.py
